# interfacing_ky026_with_nrf52840dk

./: CMakeLists.txt  README.md  ky026.cpp  ky026.h  ky026_interfacing_nrf 1.7z  main.cpp  prj.conf
